# openai_pymel

./: .gitignore  LICENSE  Pipfile  constants.py  openai_pymel.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/openai_pymel/: constants.py  entry.py  gui.py  openai_pymel.py  settings.toml
tests/: test_openai_pymel.py
