[metadata]
name = openai_pymel
description = openai interface to generate pymel scripts
author = Landon Ginn
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    openai_pymel
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.010
    flake8>=3.9
    tox>=3.24

[options.package_data]
openai_pymel = py.typed

[flake8]
max-line-length = 160